--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
         <h1>Welcome to Robogarden Pet Shelter</h1>
         <p>We serve as home for hundreds of pets.</p>
-        <p> pets are cool!!</p>
+        <p> pets are cool!!!!!!
+        </p>
 
         <table>
             <caption>Robogarden Shelter Pets</caption>
